[package]
name = "nats-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.36.0", features=["full"]}
anyhow = "1.0.81"
thiserror = "1.0.58"
futures = { version = "0.3.21"}

bytes = "1.6.0"
nom = "7.1.3"

serde = { version = "1.0.197", features=["derive"] }
serde_json = "1.0.115"
